# $Id$

EXTRA_DIST = help.cc mainwindow.cc passworddialog.cc			\
passwordrecord.cc newpassworddialog.cc info.cc yapetunlockdialog.cc	\
yapetlockscreen.cc help.h mainwindow.h passworddialog.h			\
passwordrecord.h newpassworddialog.h info.h yapetunlockdialog.h		\
yapetlockscreen.h pwgendialog.h pwgendialog.cc mainwindowhotkeys.h
